css/styles.css
#header img{
  float:right;
  height:77px;
  width: 77px;
}
/*image size may change later, leaving a comment to denote that the difference should be about 20 pixels*/
.marginfix{
  margin-bottom:-57px;
}

#interests{
  background-color:#adcfda;
}

body{
  background-color:#c7e1f9;
  font-family:sans-serif;
}

#projects{
  background-color:#adcfda;
}

.container{
  margin-top:28px;
}

@media screen and (max-width: 768px)
{
  #header{
    margin-top:304px;
  }
}

.navbar-default{
  background-color:#7d9faa;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{
  background-color:#9dbfca;
}

#about{
  padding:1px;
}

input[type='checkbox']{
  display:none;
}

.lbl-toggle {
  display: block;
  font-weight: bold;
  padding: 1rem;
  color: #906060;
  background: #7d9faa;
  border-radius: 7px;
}

.lbl-toggle:hover {
  color: #6c4a00;
}

.bg-toggle {
  display: block;
  font-weight: bold;
  padding: 1rem;
  color: #906060;
  background: #7d9faa;
  border-radius: 7px;
  margin-right: 91%;
}

.bg-toggle:hover {
  color: #6c4a00;
}

.collapsible-content {
  max-height: 0px;
  overflow: hidden;
}

.toggle:checked + .lbl-toggle + .collapsible-content {
  max-height: 350px;
}

.toggle:checked + .lbl-toggle{
  margin-bottom:-3px;
  border-bottom:none;
}

.invis{
  color:#7d9faa;
}

.active :not(.invis){
  border-radius:7px;
}

